- fix db init, removed empty line, generated first id = 1 (old 2) - adds transaktion save flow - adds skeleton for findAll (by Category, by Subcategory, filter by date) Transaktion flow - disabled test (fix it later) - refactoring